[package]
name = "entrypoint"
version = "0.1.0"
edition = "2021"

[patch.crates-io]
radium = { git = "https://github.com/lita-xyz/ferrilab.git", branch = "radium-0.7.0-delendum" }
cc = { git = "https://github.com/lita-xyz/cc-rs.git", branch = "1.1.18-delendum" }
blst = { git = "https://github.com/lita-xyz/blst.git", branch = "0.3.13-delendum" }

[dependencies]
rand = "0.8.5"
once_cell = "1.19.0"
getrandom = { version = "0.2.15", features = ["custom"] }
revm = "14.0.0"
