[workspace]

members = [
    ".",
		"examples/testing",
]

[package]
name = "entrypoint"
version = "0.1.0"
edition = "2021"

[lib]

[[test]]
name = "valida_integration_test"

[dependencies]
rand = "0.8.5"
once_cell = "1.19.0"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
getrandom = { version = "0.2.15", features = ["custom"] }
